# bitslice

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
bitslice/: __init__.py  bitslice.py
