[tool.poetry]
name = "bitslice"
version = "0.1.0"
description = ""
authors = ["zegervdv <zegervdv@me.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.3.0"
mypy = "^0.770"
pytest-mypy = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
