[tool.poetry]
name = "bitslice"
version = "0.3.0"
description = "Verilog-like bitvector slicing"
authors = ["Zeger Van de Vannet <zegervdv@me.com>"]
license = "MIT"
homepage = "https://github.com/zegervdv/bitslice"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pre-commit = "^2.3.0"
mypy = "^0.770"
pytest-mypy = "^0.6.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
